--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ body{
   transform: translateX(100%);
 }
 
-.navbar a:after {
+/* .navbar a:after {
   position: absolute;
   content: '';
   top: 0;
@@ -123,7 +123,7 @@ body{
   border-right: 4px solid transparent;
   box-sizing: border-box;
   transform: translateX(-100%);
-}
+} */
 
 .navbar a:hover {
   box-shadow: 0 5px 15px rgb(255, 250, 250);
@@ -136,12 +136,12 @@ body{
   transition: .21s transform linear, .21s height linear .21s;
 }
 
-.navbar a:hover:after {
+/* .navbar a:hover:after {
   border-color: #020202;
   height: 100%;
   transform: translateX(0);
   transition: .31s transform linear, .31s height linear .51s;
-}
+} */
 
 .navbar a {
   color: rgb(255, 255, 255);
