--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@ footer .content .link-boxes .input-box{
             <li><a class="Home" href="http://127.0.0.1:5502/portfolio/portfolio.html">Home</a></li>
             <li><a class="Home"  href="http://127.0.0.1:5502/portfolio/about1.html">About</a></li>
             <li><a class="Home"  href="http://127.0.0.1:5502/portfolio/skills.html">Sklls</a></li>
-            <li><a class="Home"  href="http://127.0.0.1:5502/portfolio/project.html">Project</a></li>
+            <li><a class="Home"  href="https://brajesh-kumar01.github.io/my-project/">Project</a></li>
             <li><a class="Home"  href="http://127.0.0.1:5502/portfolio/contact.html">Contact</a></li>
             <!-- <li><a class="Home"  href="#">Login</a></li> -->
           </ul>
