--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@ footer .content .link-boxes .input-box{
             <span class="line line3"></span>
           </div>
           <ul class="menu-items">
-            <li><a class="Home" href="http://127.0.0.1:5502/portfolio/portfolio.html">Home</a></li>
+            <li><a class="Home" href="https://brajesh-kumar01.github.io/portfolio/">Home</a></li>
             <li><a class="Home"  href="http://127.0.0.1:5502/portfolio/about1.html">About</a></li>
             <li><a class="Home"  href="http://127.0.0.1:5502/portfolio/skills.html">Sklls</a></li>
             <li><a class="Home"  href="https://brajesh-kumar01.github.io/my-project/">Project</a></li>
