--- a/index.html
+++ b/index.html
@@ -977,10 +977,10 @@ footer .content .link-boxes .input-box{
           </div>
           <ul class="menu-items">
             <li><a class="Home" href="https://brajesh-kumar01.github.io/portfolio/">Home</a></li>
-            <li><a class="Home"  href="http://127.0.0.1:5502/portfolio/about1.html">About</a></li>
-            <li><a class="Home"  href="http://127.0.0.1:5502/portfolio/skills.html">Sklls</a></li>
+            <li><a class="Home"  href="https://brajesh-kumar01.github.io/about2/">About</a></li>
+            <li><a class="Home"  href="https://brajesh-kumar01.github.io/skills/">Sklls</a></li>
             <li><a class="Home"  href="https://brajesh-kumar01.github.io/my-project/">Project</a></li>
-            <li><a class="Home"  href="http://127.0.0.1:5502/portfolio/contact.html">Contact</a></li>
+            <li><a class="Home"  href="https://brajesh-kumar01.github.io/contact/">Contact</a></li>
             <!-- <li><a class="Home"  href="#">Login</a></li> -->
           </ul>
           <h1 class="logo"></h1>
